--- a/styles.css
+++ b/styles.css
@@ -12,3 +12,28 @@ sentence span {
   opacity: 0;
   animation: animateWords 5s ease-in-out infinite;
 }
+/*Delay words and color*/
+.words span:nth-child(1){
+  animation-delay: 0s;
+  color: #678a6b;
+}
+.words span:nth-child(2){
+  animation-delay: 3s;
+  color: #bcd292;
+}
+.words span:nth-child(3){
+  animation-delay: 6s;
+  color: #e7d7fc;
+}
+.words span:nth-child(4){
+  animation-delay: 9s;
+  color: #dec1f5;
+}
+.words span:nth-child(5){
+  animation-delay: 12s;
+  color: #8769ac;
+}
+.words span:nth-child(6){
+  animation-delay: 15s;
+  color: #e7d7fc;
+}
